# crm-master

./: Cargo.toml  README.md  cliff.toml
.github/workflows/: build.yml
crm/: Cargo.toml  build.rs
crm/src/: client.rs  server.rs
crm/src/pb/: crm.rs
user-stat/: Cargo.toml
user-stat/examples/: gen.rs
user-stat/migrations/: 20250510115309_init.sql
