[workspace]
members = ["crm", "user-stat"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.98"
prost = "0.13.5"
prost-build = "0.13.5"
prost-types = "0.13.5"
tonic = { version = "0.13.1", features = ["zstd"] }
tonic-build = "0.13.1"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
