[package]
name = "user-stat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
rand = "0.9.1"

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
fake = { version = "4.3.0", features = ["derive", "chrono"] }
nanoid = "0.4.0"
